--- a/themes/hugo-classic/layouts/partials/header.html
+++ b/themes/hugo-classic/layouts/partials/header.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="{{ . | absURL }}">
     {{- end }}
     {{ partial "head_custom.html" . }}
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
 
   <body>
